force-app/main/default/objects/Vessel__c/fields/Deadweight__c.field-meta.xml
<CustomField>
    <fullName>Deadweight__c</fullName>
    <inlineHelpText>Deadweight of the vessel measured in tonnes</inlineHelpText>
    <label>Deadweight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>