force-app/main/default/objects/Vessel__c/fields/Lenght__c.field-meta.xml
<CustomField>
    <fullName>Lenght__c</fullName>
    <label>Lenght</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>