force-app/main/default/objects/Vessel__c/fields/max_TEU__c.field-meta.xml
<CustomField>
    <fullName>max_TEU__c</fullName>
    <inlineHelpText>maximum TEU of the vessel</inlineHelpText>
    <label>max TEU</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>