force-app/main/default/objects/Vessel__c/fields/Vessel_owner__c.field-meta.xml
<CustomField>
    <fullName>Vessel_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vessel owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Vessel Owner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vessels</relationshipLabel>
    <relationshipName>Vessels_owner</relationshipName>
    <type>Lookup</type>
</CustomField>