force-app/main/default/objects/Vessel__c/fields/year_of_build__c.field-meta.xml
<CustomField>
    <fullName>year_of_build__c</fullName>
    <label>year of build</label>
    <length>4</length>
    <type>Text</type>
</CustomField>