force-app/main/default/objects/Vessel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Deadweight__c</columns>
    <columns>max_TEU__c</columns>
    <columns>Lenght__c</columns>
    <columns>Width__c</columns>
    <columns>year_of_build__c</columns>
    <columns>Vessel_owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>